--- a/scss/app.scss
+++ b/scss/app.scss
@@ -104,7 +104,7 @@ a:visited {
 
 @import "configuration";
 @import "home";
-@import "infomodule";
+@import "modules";
 @import "login";
 @import "privacypolicy";
 @import "utility";
