Add styles for chapel events list

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -104,7 +104,8 @@ a:visited {
 
 @import "configuration";
 @import "home";
-@import "modules";
 @import "login";
+@import "modules";
+@import "moduleviews";
 @import "privacypolicy";
 @import "utility";
