Fix ion-spinner deprecation warnings by replacing with CSS animation

--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -10,6 +10,12 @@
   @extend .moduleColorCycle;
 }
 
+.login-loader {
+  @extend .animated;
+  @extend .infinite;
+  @extend .spin;
+}
+
 // Only on grade a and grade b devices
 .grade-a,
 .grade-b {
