--- a/scss/_keyframes.scss
+++ b/scss/_keyframes.scss
@@ -335,3 +335,18 @@
   0% { margin-top: 0; }
   100% { margin-top: 20vh; }
 }
+
+@-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+}
+@keyframes spin {
+    0% {transform:rotate(0deg);}
+    100% {transform:rotate(360deg);}
+}
+.spin {
+  -webkit-animation-name: spin;
+          animation-name: spin;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+}
