--- a/scss/_login.scss
+++ b/scss/_login.scss
@@ -39,8 +39,8 @@
     .login-button {
       @extend .horizontal-center;
       width: 75%;
-      .loading-indicator {
-        @extend .center;
+      .login-loader {
+        font-size: 1.5rem;
       }
     }
   }
