--- a/scss/app.scss
+++ b/scss/app.scss
@@ -105,6 +105,7 @@ a:visited {
 @import "configuration";
 @import "home";
 @import "login";
+@import "menu";
 @import "modules";
 @import "moduleviews";
 @import "privacypolicy";
