Change color of aquamarine used for chapel events to be less ugly

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -11,8 +11,8 @@ $colors: (
   dark-red: #A51914,
   dark-yellow: #FFBB00,
   light-teal: #46DBD3,
-  dark-aquamarine: #245D66,
-  light-aquamarine: #6CB2A7,
+  dark-aquamarine: #35A593,
+  light-aquamarine: #13CAAD,
   light-purple: #BF87BF,
   light-yellow: #FFE68E
 );
