--- a/scss/_modules.scss
+++ b/scss/_modules.scss
@@ -13,6 +13,10 @@ goco-module {
       margin-top: 0;
     }
   }
+  .module-icon-container {
+    height: 100%;
+    width: 100%;
+  }
   .icon {
     height: 30vh;
     width: 100%;
