Add about section to options page

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -108,5 +108,6 @@ a:visited {
 @import "menu";
 @import "modules";
 @import "moduleviews";
+@import "options";
 @import "privacypolicy";
 @import "utility";
