--- a/scss/app.scss
+++ b/scss/app.scss
@@ -104,6 +104,7 @@ a:visited {
 
 @import "configuration";
 @import "home";
+@import "icons";
 @import "login";
 @import "menu";
 @import "modules";
