Add animation for info numbers loading on grade b devices

--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -31,6 +31,15 @@
   .login-bottom-half {
     @extend .slideInUp;
   }
+  // Module info number fade in on load
+  .module-info-container.ng-hide-remove {
+    -webkit-transition: 1000ms;
+            transition: 1000ms;
+    .info-number {
+      @extend .animated;
+      @extend .fadeIn;
+    }
+  }
 }
 
 // Only on grade a devices
