--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,7 +9,7 @@ $colors: (
   mint-green: #58F5A7,
   light-red: #F2726D,
   dark-green: #24A552,
-  dark-red: #A51914,
+  dark-red: #A52D28,
   dark-yellow: #FFBB00,
   light-teal: #46DBD3,
   dark-aquamarine: #35A593,
