Add styling for h4, h5, and h6

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -39,7 +39,7 @@ textarea {
   h1 { font-size: 20vw; line-height: 1; }
   h2 { font-size: 10vw; }
   h3 { font-size: 6vw; }
-  h1, h2, h3 {
+  h1, h2, h3, h4, h5, h6 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 700;
     text-transform: uppercase;
