Add Highland Express schedule (resolves #58)

--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -29,6 +29,9 @@
   &.chapel-icon {
     background-image: url('../img/chapel.svg');
   }
+  &.highland-express-icon {
+    background-image: url('../img/highlandexpresslogo.svg');
+  }
   &.meal-points-icon {
     background-image: url('../img/silverware.svg');
   }
