--- a/scss/_moduleviews.scss
+++ b/scss/_moduleviews.scss
@@ -28,4 +28,64 @@
       }
     }
   }
+  .highland-express {
+    .highland-header {
+      height: 80px;
+      .highland-title {
+        margin: 10px;
+        text-align: center;
+        vertical-align: middle;
+        .highland-express-icon {
+          display: inline-block;
+          width: 35px;
+          height: 35px;
+          margin-right: 5px;
+          vertical-align: middle;
+        }
+      }
+      .highland-controls {
+        margin-bottom: 5px;
+        color: color(white);
+        text-align: center;
+        .highland-schedule-day {
+          display: inline-block;
+          margin: 0;
+          text-transform: capitalize;
+        }
+        .icon {
+          margin-left: 15px;
+          margin-right: 15px;
+          &:before {
+            font-size: 20px;
+          }
+        }
+      }
+    }
+    .highland-banner {
+      padding-top: 10px;
+      padding-left: 10px;
+      background-color: color(dark-yellow);
+      padding-bottom: 5px;
+      color: color(muted-gray);
+      h3 {
+        color: black;
+        margin-bottom: 5px;
+      }
+    }
+    .highland-schedule {
+      background-color: color(light-gray);
+      .row {
+        margin: -1px;
+        padding-left: 10px;
+        padding-right: 10px;
+        border-bottom: 1px solid color(mid-gray);
+        &.highland-destinations {
+          border-width: 2px;
+        }
+        .col {
+          text-align: center;
+        }
+      }
+    }
+  }
 }
