Add Module View Header directive to simplify module views
Abstracts the header, containing the module icon and label, into a neat
directive that has custom styles applied to it. This change serves to
both reduce redundancy and improve design consistency.

--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -10,6 +10,7 @@
   &.icon-inline {
     height: auto;
     width: auto;
+    display: inline-block;
     background-repeat: no-repeat;
     background-size: contain;
     background-position: left center;
