--- a/scss/app.scss
+++ b/scss/app.scss
@@ -128,6 +128,7 @@ goco-loader {
 @import "login";
 @import "menu";
 @import "modules";
+@import "moduleviewheader";
 @import "moduleviews";
 @import "options";
 @import "privacypolicy";
