Change Highland Express announcement colors to look better

--- a/scss/_moduleviews.scss
+++ b/scss/_moduleviews.scss
@@ -35,11 +35,11 @@
     .highland-banner {
       padding-top: 10px;
       padding-left: 10px;
-      background-color: color(dark-yellow);
+      background-color: color(mid-gray);
       padding-bottom: 5px;
-      color: color(muted-gray);
+      color: color(black);
       h3 {
-        color: black;
+        color: color(dark-green);
         margin-bottom: 5px;
       }
     }
