Change use of word 'banner' to 'announcement'

--- a/scss/_moduleviews.scss
+++ b/scss/_moduleviews.scss
@@ -32,7 +32,7 @@
         }
       }
     }
-    .highland-banner {
+    .highland-announcement {
       padding-top: 10px;
       padding-left: 10px;
       background-color: color(mid-gray);
