Add Fighting Scots logo icon

--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -30,6 +30,9 @@
   &.chapel-icon {
     background-image: url('../img/chapel.svg');
   }
+  &.fighting-scots-icon {
+    background-image: url('../img/fightingscotslogo.svg');
+  }
   &.highland-express-icon {
     background-image: url('../img/highlandexpresslogo.svg');
   }
