Add burgundy to color variables

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -16,7 +16,8 @@ $colors: (
   dark-aquamarine: #35A593,
   light-aquamarine: #13CAAD,
   light-purple: #BF87BF,
-  light-yellow: #FFE68E
+  light-yellow: #FFE68E,
+  burgundy: #83262E
 );
 
 $configuration-item-height: 20px;
