--- a/scss/_keyframes.scss
+++ b/scss/_keyframes.scss
@@ -162,23 +162,35 @@
   0%, 100% {
     background-color: rgba(color(blue), 0.90);
   }
-  20% {
+  10% {
     background-color: rgba(color(orange), 0.90);
   }
-  40% {
+  20% {
     background-color: rgba(color(purple), 0.90);
   }
-  60% {
+  30% {
     background-color: rgba(color(mint-green), 0.90);
   }
-  80% {
+  40% {
     background-color: rgba(color(light-red), 0.90);
+  }
+  50% {
+    background-color: rgba(color(light-teal), 0.90);
+  }
+  60% {
+    background-color: rgba(color(light-aquamarine), 0.90);
+  }
+  70% {
+    background-color: rgba(color(dark-green), 0.90);
+  }
+  80% {
+    background-color: rgba(color(burgundy), 0.90);
   }
 }
 
 .moduleColorCycle {
-  -webkit-animation-duration: 2.25s;
-          animation-duration: 2.25s;
+  -webkit-animation-duration: 4s;
+          animation-duration: 4s;
   @include animationName('moduleColorCycle');
 }
 
