Add home navigation directive

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -124,6 +124,7 @@ goco-loader {
 
 @import "configuration";
 @import "home";
+@import "homenav";
 @import "icons";
 @import "login";
 @import "menu";
