--- a/scss/_configuration.scss
+++ b/scss/_configuration.scss
@@ -20,6 +20,9 @@
   .item-checkbox {
     padding-left: 10px;
   }
+  .item-not-selected {
+    opacity: 0.7;
+  }
   .goco-checkbox {
     width: 100%;
     height: 100%;
