Move banner to top of screen (fixes #70)

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -22,3 +22,5 @@ $colors: (
 
 $configuration-item-height: 22px;
 $configuration-item-height-big: 40px;
+$banner-height: 33px;
+$banner-font-size: 16px;
