--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -19,3 +19,10 @@
     vertical-align: -0.1em;
   }
 }
+.app-banner {
+  height: $banner-height;
+  .title {
+    font-size: $banner-font-size;
+    line-height: $banner-height + 1;
+  }
+}
