--- a/scss/_moduleviews.scss
+++ b/scss/_moduleviews.scss
@@ -65,7 +65,12 @@
       }
     }
     .highland-schedule {
+      height: 100vh; width: 100vw;
+      margin-bottom: 20px;
       background-color: color(light-gray);
+      .highland-schedule-inner {
+        margin-bottom: 20px;
+      }
       .row {
         margin: -1px;
         padding-left: 10px;
@@ -75,6 +80,7 @@
           border-width: 2px;
         }
         .col {
+          min-width: 100px;
           text-align: center;
         }
       }
