Add correct amount of space at bottom of lists
Ionic's styles set the last item of a list's
bottom margin to 0, causing it to be partially cut
off. Setting it to 17px seems to prevent it from
being cut off while still avoiding any blank space
at the bottom of the list.

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -53,6 +53,10 @@ textarea {
     margin-right: 1em;
   }
 }
+// Add correct amount of space at bottom of list
+.list:last-child {
+    margin-bottom: 17px;
+}
 // Reduce header font sizes on tablets and horizontal phones
 @media (min-width: 600px) {
   .scroll-content {
