Add Next Meal module
Displays the next meal as a list of menu items.
Uses a new color "acid-green" that is meant to
emulate the cafeteria employee uniforms.

--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -42,6 +42,9 @@
   &.person-icon {
     background-image: url('../img/person.svg');
   }
+  &.plate-icon {
+    background-image: url('../img/plate.svg');
+  }
   &.thermometer-icon {
     background-image: url('../img/thermometer.svg');
   }
