--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -17,6 +17,7 @@ $colors: (
   light-aquamarine: #13CAAD,
   light-purple: #BF87BF,
   light-yellow: #FFE68E,
+  acid-green: #64D149,
   burgundy: #83262E
 );
 
