Change list bottom spacing to work cross-platform

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -55,7 +55,7 @@ textarea {
 }
 // Add correct amount of space at bottom of list
 .list:last-child {
-    margin-bottom: 17px;
+  padding-bottom: 17px;
 }
 // Reduce header font sizes on tablets and horizontal phones
 @media (min-width: 600px) {
