Change Highland Express color to gold

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -16,7 +16,7 @@ $colors: (
   dark-aquamarine: #35A593,
   light-aquamarine: #13CAAD,
   light-purple: #BF87BF,
-  light-yellow: #FFE68E,
+  gold: #DCBE00,
   acid-green: #64D149,
   burgundy: #83262E
 );
