Fix login loading spinner
The spinner would spin once then stop. Using `<ion-spinner>` provides a
more consistent cross-platform experience and also works much better.

--- a/scss/_login.scss
+++ b/scss/_login.scss
@@ -40,7 +40,11 @@
       @extend .horizontal-center;
       width: 75%;
       .login-loader {
-        font-size: 1.5rem;
+        display: block;
+        height: 47px;
+        & > svg {
+          margin-top: 10px;
+        }
       }
     }
   }
