Add pull to refresh on interaction modules

--- a/scss/_moduleviews.scss
+++ b/scss/_moduleviews.scss
@@ -1,4 +1,7 @@
 .module-view-content {
+  .scroll-refresher .ionic-refresher-content {
+    color: color(white);
+  }
   .error-message {
     font-size: 4.5vh;
     .emoji {
